force-app/main/default/objects/Litmos__LearningPath__c/Litmos__LearningPath__c.object-meta.xml
<CustomObject>
    <label>Learning Path</label>
    <nameField>
        <label>LearningPath Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Paths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>