force-app/main/default/objects/Litmos__LearningPath__c/fields/Litmos__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>Litmos__DisplayOrder__c</fullName>
    <label>DisplayOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>