force-app/main/default/objects/Litmos__LearningPath__c/fields/Litmos__IncludeInLibrary__c.field-meta.xml
<CustomField>
    <fullName>Litmos__IncludeInLibrary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IncludeInLibrary</label>
    <type>Checkbox</type>
</CustomField>