force-app/main/default/objects/Litmos__LearningPath__c/fields/Litmos__IsCourseOrderOptional__c.field-meta.xml
<CustomField>
    <fullName>Litmos__IsCourseOrderOptional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCourseOrderOptional</label>
    <type>Checkbox</type>
</CustomField>