force-app/main/default/objects/Litmos__LearningPath__c/fields/Litmos__LitmosID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LitmosID__c</fullName>
    <externalId>true</externalId>
    <label>LitmosID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>