force-app/main/default/objects/Litmos__LearningPath__c/fields/Litmos__Users_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Users_Assigned__c</fullName>
    <label>Users Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>